examples/c/error-codes/violates-constraint/fatal/CV-TEG2-bad-static.output
CV-TEG2-bad-static.c:2:24: error: controlling expression type 'char' not compatible with any generic association type
      return _Generic( (char)'a', int: 2, long: 3) != 0;
                       ^~~~~~~~~
1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
