examples/c/error-codes/violates-constraint/fatal/CV-TEG2-bad-static.c
int main() {
      return _Generic( (char)'a', int: 2, long: 3) != 0;
}
